--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body>
   <h1>APUSH AMSCO Questions and Answers</h1>
-  <h2><a href="">btodaro</a></h2>
+  <h2><a href="/btodaro.html">btodaro</a></h2>
   <h2><a href="">jackwalterss</a></h2>
 </body>
