--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <head>
-  <title>APUSH AMSCO Questions and Answers</title>
+  <title>APUSH Questions and Answers</title>
 </head>
 <body>
-  <h1>APUSH AMSCO Questions and Answers</h1>
-  <h2><a href="/apush/btodaro.html">btodaro</a></h2>
-  <h2><a href="/apush/jackwalterss.html">jackwalterss</a></h2>
+  <h1>APUSH Questions and Answers</h1>
+  <h2>Sources:</h2>
+  <h3><a href="/apush/btodaro.html">btodaro</a></h3>
+  <h3><a href="/apush/jackwalterss.html">jackwalterss</a></h3>
 </body>
