--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -1,5 +1,6 @@
 <head>
   <title>APUSH - jackwalterss</title>
+  <link rel="stylesheet" type="text/css" href="/apush/style.css">
 </head>
 <body>
   <button class="accordion">Chapter 1</button>
