--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -1,6 +1,7 @@
 <head>
   <title>APUSH - jackwalterss</title>
   <link rel="stylesheet" type="text/css" href="/apush/style.css">
+  <script type="text/javascript" src="/apush/script.js"></script>
 </head>
 <body>
   <button class="accordion">Chapter 1</button>
