--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -42,11 +42,39 @@ div.panel {
 </head>
 <body>
 
-<h2>Accordion with symbols</h2>
-<p>In this example we have added a "plus" sign to each button. When the user clicks on the button, the "plus" sign is replaced with a "minus" sign.</p>
-<button class="accordion">Section 1</button>
+<h2>jackwalterss</h2>
+
+<button class="accordion">Chapter 1</button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>"In the 1500's, N.A.'s possessed a wide range of complex cultures." Each of the following support this statement EXCEPT</p>
+  <p>Native Americans' susceptibility to euro. diseases</p>
+
+  <p>Which of the following best describes the way Europeans treat N.A. in the 1500s-1600s?</p>
+  <p>N.A.'s were regarded as inferior ppl. subject to Christian dominiation.</p>
+
+  <p>Which of the following was the LEAST important factor behind the euro exploration and settlement in the 16th century?</p>
+  <p>Population Increase</p>
+
+  <p>By the end of the 16th century, all of the following were generally true about Spain's colonial empire EXCEPT</p>
+  <p>Families cont. to emigrate from Spain.</p>
+
+  <p>The delay in founding English settlements in the Americas was a result of</p>
+  <p>Religious upheavels in England</p>
+
+  <p>At the beginning of the 17th cent., all of the following factors served to increase the English role in America EXCEPT</p>
+  <p>Royal Leadership</p>
+
+  <p>The survival of the James colony can be most directly attributed to the</p>
+  <p>Development of the tobacco industry</p>
+
+  <p>Which of the following sources would be most useful in studying the development of democratic institutions in the early colonial period?</p>
+  <p>The Mayflower compact</p>
+
+  <p>Which of the following statements is the most widely accepted description of Columbus' accomplishments?</p>
+  <p>He started a permanent relationship between Europe and the Americas</p>
+
+  <p>The issue of religion figured most prominently in the consideration of which of the following?</p>
+  <p>The establishment of Puritan colonies in MA</p>
 </div>
 
 <button class="accordion">Section 2</button>
