--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -39,46 +39,51 @@ div.panel {
     transition: max-height 0.2s ease-out;
 }
 
-p {
+p.question {
+    background-color: #FFFFA0;
+}
+    
+p.answer {
     padding-bottom: 1em;
+    background-color: #A2FF81;
 }
 </style>
 </head>
 <body>
 
-<h2>jackwalterss</h2>
+<h2>APUSH: jackwalterss</h2>
 
 <button class="accordion">Chapter 1</button>
 <div class="panel">
-  <p>"In the 1500's, N.A.'s possessed a wide range of complex cultures." Each of the following support this statement EXCEPT</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- Native Americans' susceptibility to euro. diseases</p>
+<p class="question">"In the 1500's, N.A.'s possessed a wide range of complex cultures." Each of the following support this statement EXCEPT</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- Native Americans' susceptibility to euro. diseases</p>
 
-  <p>Which of the following best describes the way Europeans treat N.A. in the 1500s-1600s?</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- N.A.'s were regarded as inferior ppl. subject to Christian dominiation.</p>
+  <p class="question">Which of the following best describes the way Europeans treat N.A. in the 1500s-1600s?</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- N.A.'s were regarded as inferior ppl. subject to Christian dominiation.</p>
 
-  <p>Which of the following was the LEAST important factor behind the euro exploration and settlement in the 16th century?</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- Population Increase</p>
+  <p class="question">Which of the following was the LEAST important factor behind the euro exploration and settlement in the 16th century?</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- Population Increase</p>
 
-  <p>By the end of the 16th century, all of the following were generally true about Spain's colonial empire EXCEPT</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- Families cont. to emigrate from Spain.</p>
+  <p class="question">By the end of the 16th century, all of the following were generally true about Spain's colonial empire EXCEPT</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- Families cont. to emigrate from Spain.</p>
 
-  <p>The delay in founding English settlements in the Americas was a result of</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- Religious upheavels in England</p>
+  <p class="question">The delay in founding English settlements in the Americas was a result of</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- Religious upheavels in England</p>
 
-  <p>At the beginning of the 17th cent., all of the following factors served to increase the English role in America EXCEPT</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- Royal Leadership</p>
+  <p class="question">At the beginning of the 17th cent., all of the following factors served to increase the English role in America EXCEPT</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- Royal Leadership</p>
 
-  <p>The survival of the James colony can be most directly attributed to the</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- Development of the tobacco industry</p>
+  <p class="question">The survival of the James colony can be most directly attributed to the</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- Development of the tobacco industry</p>
 
-  <p>Which of the following sources would be most useful in studying the development of democratic institutions in the early colonial period?</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- The Mayflower compact</p>
+  <p class="question">Which of the following sources would be most useful in studying the development of democratic institutions in the early colonial period?</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- The Mayflower compact</p>
 
-  <p>Which of the following statements is the most widely accepted description of Columbus' accomplishments?</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- He started a permanent relationship between Europe and the Americas</p>
+  <p class="question">Which of the following statements is the most widely accepted description of Columbus' accomplishments?</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- He started a permanent relationship between Europe and the Americas</p>
 
-  <p>The issue of religion figured most prominently in the consideration of which of the following?</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;- The establishment of Puritan colonies in MA</p>
+  <p class="question">The issue of religion figured most prominently in the consideration of which of the following?</p>
+  <p class="answer">&nbsp;&nbsp;&nbsp;&nbsp;- The establishment of Puritan colonies in MA</p>
 </div>
 
 <button class="accordion">Section 2</button>
