--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -40,12 +40,12 @@ div.panel {
 }
 
 p.question {
-    background-color: #FFFFA0;
+    /*background-color: #FFFFA0;*/
 }
     
 p.answer {
     padding-bottom: 1em;
-    background-color: #A2FF81;
+    /*background-color: #A2FF81;*/
 }
 </style>
 </head>
