--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -51,7 +51,7 @@ p.answer {
 </head>
 <body>
 
-<h2>APUSH: jackwalterss</h2>
+<h2><a href="/apush">APUSH</a>: jackwalterss</h2>
 
 <button class="accordion">Chapter 1</button>
 <div class="panel">
