--- a/jackwalterss.html
+++ b/jackwalterss.html
@@ -33,7 +33,7 @@ button.accordion.active:after {
 
 div.panel {
     padding: 0 18px;
-    background-color: lightgray;
+    background-color: #DCDCDC;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
