--- a/btodaro.html
+++ b/btodaro.html
@@ -29,7 +29,7 @@ button.accordion.active:after {
 }
 div.panel {
     padding: 0 18px;
-    background-color: #DCDCDC;
+    background-color: #f1f1f1;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
